# un-sdd

./: .gitignore  .pre-commit-config.yaml  CI_README.md  CONFIG.py  Makefile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  dependabot.yml  format.yml
classifiers/: __init__.py  base_classifier.py  example_usage.py  non_pii_classifier.py  pii_classifier.py  pii_reflection_classifier.py
data/: dummy.csv  dummy.json
llm_model/: README.md  __init__.py  azure_strategy.py  base_model.py  cohere_strategy.py  example_usage.py  model.py  model_factory.py  openai_strategy.py  unsloth_strategy.py
modules/: __init__.py
modules/data_processor/: README.md  __init__.py  cli.py  country_utils.py  data_loader.py  example.py
modules/detect_reflect/: __init__.py  file_loader.py  isps.json  non_pii_module.py  pii_module.py  prompt_register.py  sensitivityClassifier.py  utils.py
modules/extracting_rules/: README.md  __init__.py  extractor.py  pdf_reader.py  utils.py
modules/free_text/: README.md  __init__.py  analyzer.py  cli.py  detector.py  model.py  pii_detector.py  pii_presidio.py  utils.py
modules/language_detection/: __init__.py  detector.py  file_reader.py
modules/llm_model/: model.py
notebooks/: evaluation.ipynb  finetuning_LM_PII.ipynb  inference.ipynb  tutorial.ipynb
prompts/: non_pii_detection_v1.0.jinja  pii_detection_v1.0.jinja  remove_is_kii_v1.0.jinja  remove_is_microdata_v1.0.jinja  remove_is_sensitive_kii_v1.0.jinja  remove_prompt_non_pii_table_no_isp_v1.0.jinja  remove_prompt_non_pii_v1.0.jinja  remove_prompt_reflect_non_pii_v1.0.jinja
prompts/pii_reflection/: v0.jinja
scripts/: 00_finetuning_LM_PII.py  01_inference_pii.py  02_inference_non_pii.py
tests/: README.md  __init__.py  conftest.py  requirements-test.txt  run_tests.py  test_azure_strategy.py  test_model_factory.py  test_non_pii_classifier.py  test_pii_classifier.py  test_pii_sensitivity_classifier.py
utilities/: ISP_extraction.py  data_processor.py  detect_reflect.py  extracted_rules.json  prompt_manager.py  prompt_register.py  sensitivityClassifier.py  train_unsloth.py  utils.py
